mariadb to mysql

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,21 @@ services:
       - "5173:5173"
     volumes:
       - ./frontend:/app
+
+  mysql:
+    image: mysql:latest
+    container_name: "DATABASE"
+    ports:
+      - "3306:3306"
+    stop_grace_period: 30s
+    environment:
+      MYSQL_ROOT_PASSWORD: "superPassword"
+      MYSQL_DATABASE: "dashboard"
+      MYSQL_USER: "datawatcher"
+      MYSQL_PASSWORD: "superPassword"
+      TZ: "Poland/Warsaw"
+    depends_on:
+      - vue
   
   express:
     build: ./backend
@@ -16,3 +31,6 @@ services:
       - "3000:3000"
     volumes:
       - ./backend:/app
+    depends_on:
+      - mysql
+      
