--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@kalimahapps/vue-icons": "^1.0.8",
     "bootstrap-icons": "^1.10.2",
+    "firebase": "^9.15.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
